tests/component-macros-integration/tests/trybuild/component_fail.stderr
error: expected identifier, found `;`
 --> tests/trybuild/component_fail.rs:5:8
  |
5 | struct ;
  |        ^ expected identifier
