tests/component-macros-integration/tests/trybuild/component_fail.rs
use component_macros::component;

// Missing struct body to trigger a syntax or implementation failure expectation
#[component(singleton, priority = 5)]
struct ;

fn main() {}
